# python-sample

./: .gitignore  .pylintrc  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-checks.yml
src/sample/: __init__.py  sample.py
test/: test_sample.py
